[package]
name = "keybinder"
version = "0.4.0"
edition = "2021"
authors = ["MD Gaziur Rahman Noor <mdgaziurrahmannoor@gmail.com>"]
description = "Rust wrapper for Keybinder"
repository = "https://github.com/mdgaziur/keybinder"
homepage = "https://github.com/mdgaziur/keybinder"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[dev-dependencies]
gtk = "0.15.5"
